style.css
*
{
    font-family: 'Roboto', sans-serif;
}

body
{
    display: flex;
    justify-content: center;
    background-color: black;
    cursor: url('cursor.png'), auto;
    height: 95%;
    position: absolute;
}

.container
{
    width: 100vw;
    height: 100%;

    background-color:rgb(17, 17, 17);

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    color: #ffffff;
}
.tile
{
    width: 80vw;
    max-width: 350px;
    background-color: rgba(240, 240, 240, 0.103);
    text-align: center;
    margin-top: 10vh;
    border: #ffffff 1px solid;
    border-radius: 7px;
    padding: 1rem;
    padding-bottom: 2rem;
}
.button-main
{
    padding: 10px;
    width: 85%;
    background-color: rgb(207, 219, 243);
    cursor: url('cursor2.png'), auto;
    font-weight: bolder;
}

